# aldi-pixel-font

./: CMakeLists.txt  README.md  pack.cmake.in
pixelfont/: font.py  fonteditor.py  fonteditor.spec.in  fonteditor.ui  glyph.py  glypheditor.py  text.py
